[package]
name = "sskr"
version = "0.9.1"
edition = "2024"
description = "Sharded Secret Key Reconstruction (SSKR) for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-sskr-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/sskr"
keywords = ["cryptography"]                                        # Up to five
categories = ["cryptography"]                                      # https://crates.io/category_slugs

[dependencies]
bc-rand = "^0.4.1"
bc-shamir = "^0.10.0"

thiserror = "^2.0"

[dev-dependencies]
hex-literal = "^0.4.1"
hex = "^0.4.3"
version-sync = "^0.9.0"
rand = "^0.8.5"
