[package]
name = "sskr"
version = "0.9.1"
edition = "2024"
description = "Sharded Secret Key Reconstruction (SSKR) for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-sskr-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/sskr"
keywords = ["cryptography"]                                        # Up to five
categories = ["cryptography"]                                      # https://crates.io/category_slugs

[dependencies]
bc-rand = { git = "https://github.com/willrnch/bc-rand-rust.git", rev = "4013ca45388a9bc1c8ca822ba09b551886857e31" }
bc-shamir = { git = "https://github.com/willrnch/bc-shamir-rust.git", rev = "df157d1fa4521cb8b1bd2743d27631127fd7a24e" }

thiserror = "^2.0"

[dev-dependencies]
hex-literal = "^0.4.1"
hex = "^0.4.3"
version-sync = "^0.9.0"
rand = "^0.9.2"
